# dashRep

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  env-sample  hello.py  log.md  mypy.ini  pyproject.toml  readme.md  todolist.txt  todolist_archive.txt
app/: app.py  app_covid.py  app_debug.py  app_ed.py  app_sitrep.py  callbacks.py  config.py  data_mx.py  demo.py  hello.py  index.py  landing.py  layouts.py  utils.py  wrangle.py  wrangle_govuk.py
app/assets/: header.css
app/bak/: app_sitrep.py
app/config/: config.py
app/covid/: covid.py
app/dash/: demo.py
app/debug/: debug.py
app/ed/: ed.py
app/sitrep/: callbacks.py  layout.py  sitrep.py
app/utils/: utils.py
app/wrangle/: covid.py  sitrep.py
config/: env
data/: census_t03.json  census_t06.json  census_wms.json  clean.json  icu.json  icu_t03.json  icu_t06.json  icu_wms.json  skeleton.csv  user_edits.csv
mwe/: editdata.py
notebooks/: covid.ipynb  ed.ipynb  ipc.ipynb  try-requests.ipynb
notebooks/sql/: ros.sql
utils/: make_anon_census.py  make_anon_icu.py  setup.py  setup_sitrep_db.py
