[tool.poetry]
name = "dashrep"
version = "0.1.0"
description = "sitrep using dash"
authors = ["Steve Harris <doc@steveharris.me>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.3.1"
dash = "^2.0.0"
pandas = "*"
numpy = "*"
python-dotenv = "^0.19.1"
dash-bootstrap-components = "^1.0.0"
Flask = "^2.0.1"
pytest = "^6.2.5"
Faker = "^9.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
